2004-08-08  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* put enhancement and depletion MOSFET into one component
	class
	* created a MOSFET with substrate port

2004-08-07  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug that remembers only one subcircuit history step
	* update changed subcircuits in all open documents

2004-07-24  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* functions: distribute horizontally/vertically,
	set on grid

2004-07-24  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* component name can be edited

2004-07-24  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* MScoupled can now be loaded
	* marker set correctly after new upper x bound
	* undo/redo set changed flag of document
	* fixed bug in showing smith chart with r>1
	* resize of setting dialogs a little nicer
	* menu: align

2004-07-21  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/Makefile.am (HTML): Added missing files.

2004-07-18  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new components: msgap, bjtsub
	* subcircuit netlist now matches the qucsator style
	* fixed bug in loading equations

2004-07-16  Stefan Jahn  <stefan@lkcc.org>

	* qucsdoc.cpp (QucsDoc): Fixed bug when instantiating a qucsdoc
	without a given application pointer (0).
	(giveNodeNames): Fixed path reference when writing a subcircuit
	netlist.

	* qucs_de.ts: Updated german translation.

	* qucs.cpp: Defining new global variable 'QucsHomeDir'
	containing the "root" directory for the Qucs application.
	Changed all possible callers.

2004-07-14  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* paintings/filldialog.cpp (FillDialog): Fixed description
	of dense levels.

	* dialogs/settingsdialog.cpp (SettingsDialog): Fixed widget
	layout error for the 'show Grid' option.

	* qucs.cpp: Introduced QucsWorkDir as global variable used
	to save the current directory instead of changing into