@@ -1906,6 +1906,10 @@ Błędny początek linii!</translation>
         <source>source junction perimeter</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>channel-length modulation parameter in 1/V</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsApp</name>
